fix figure overflow

--- a/src/asset/scss/style.scss
+++ b/src/asset/scss/style.scss
@@ -83,6 +83,7 @@ body {
         position: relative;
         display: block;
         margin: 0;
+        overflow: hidden;
     }
 }
 
